Bugfix / Ingredient list on mobile (#16)
* Update footer styles

* Update flex wrapper

* Display recipe author

* Refactor imageTemplate

* Display webp image

* Update save content

* Update homepage image and title

* Update sitemap

--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -2,11 +2,11 @@
 .footer {
   background-color: #fff;
   border-top: 1px solid var(--divider-color);
+  padding: $space-large 0;
 
-  @media screen and (max-width: $mobileMax) {
-    padding: $space-large 0;
-  }
-  @media screen and (min-width: $tabletMin) {
-    padding: 100px 0;
-  }
+  // @media screen and (max-width: $mobileMax) {
+  // }
+  // @media screen and (min-width: $tabletMin) {
+  //   padding: 100px 0;
+  // }
 }
